# maidian_tracking

./: .gitignore  .skillhubignore  SKILL.md  cli-capabilities.csv  cli-skill-development-spec1.md  pyproject.toml  requirements.lock.txt  skill-install.sh  smoke-test.json
assets/: SETUP_GUIDE.md
evals/: skill-evals.json
manage_tracking/: __init__.py  cli.py  env.py  skillhub_entry.py
manage_tracking/core/: __init__.py  api.py  client.py  config.py  session.py  sql_fetch.py
references/: data-query.md
references/tracking-wiki/: .generated-by  index.md
references/tracking-wiki/concepts/: data-quality.md  query-playbook.md  relation-model.md  snapshot-sync.md  track-key-patterns.md  tracking-model.md
references/tracking-wiki/entities/: business-lines.md
references/tracking-wiki/entities/apps/: app-10-lhspc.md  app-11-lhsws.md  app-12-lhsa.md  app-16-lhsbd.md  app-17-lhspt.md  app-18-lhssc.md  app-19-lhsps.md  app-20-notex.md  app-21-aichat.md  app-22-lhsn.md  app-23-aime.md  app-27-lhsbdw.md  app-29-chatbi.md  app-30-maidian.md  app-31-dailybrew.md  app-32-hxkline.md  app-33-pixlore.md  app-35-rdify.md  app-36-deepa.md  app-37-deepad.md  app-38-tf.md  app-39-quickbi.md  app-40-aimeapp.md
references/tracking-wiki/entities/lookups/: element-lookup.md  page-lookup.md  section-lookup.md
references/tracking-wiki/entities/relations/: high-degree-tracks.md  (+1 more)
scripts/: evaluate_skill_contract.py  sync_tracking_wiki_refs.sh
tracking_query/: __init__.py  cli.py  skillhub_entry.py
tracking_query/core/: __init__.py  api.py  client.py  config.py  sql_fetch.py
(+2 files in other folders)
